# controllers/user.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"ReviewService/models"
+	"ReviewService/utils"
 )
 
 // Operations about Users
@@ -13,7 +14,7 @@ type UserController struct {
 // @Description Logs user into the system
 // @Param	username		formData 	string	true		"The username for login"
 // @Param	password		formData 	string	true		"The password for login"
-// @Success 200 {object} models.question.AllQuestion
+// @Success 200 {object} models.user.UserRe
 // @Failure 403 user not exist
 // @router /login [post]
 func (u *UserController) Login() {
@@ -21,19 +22,23 @@ func (u *UserController) Login() {
 	password:=u.GetString("password")
 	user, e1 := models.GetUserInfoByName(username)
 	resData:=new(ResultData)
+	userRe:=new(models.UserRe)
 	if e1!=nil {
 		resData.Code=MSG_ERR
 		resData.Msg="用户不存在"
 	} else {
 		if user.UserName==username&&user.PassWord==password {
+			user.Token=utils.CreateToken(user)
 			resData.Code=MSG_Suc
 			resData.Msg="登录成功"
+			userRe.Uid=user.Id
+			userRe.Token=utils.CreateToken(user)
 		}else {
 			resData.Code=MSG_ERR
 			resData.Msg="用户名或密码错误"
 		}
 	}
-	resData.Data=user
+	resData.Data=userRe
 	u.Data["json"] = resData
 	u.ServeJSON()
 }
