# swagger/swagger.yml
@@ -74,7 +74,7 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.AllQuestion'
+            $ref: '#/definitions/models.User'
         "403":
           description: user not exist
   /user/logout:
@@ -109,23 +109,6 @@ paths:
         "403":
           description: user has Registered
 definitions:
-  models.AllQuestion:
-    title: AllQuestion
-    type: object
-    properties:
-      Answer:
-        type: string
-      Category:
-        type: integer
-        format: int64
-      Id:
-        type: integer
-        format: int64
-      Question:
-        type: string
-      QuestionType:
-        type: integer
-        format: int64
   models.AllQuestionResult:
     title: AllQuestionResult
     type: object
@@ -161,6 +144,22 @@ definitions:
       Id:
         type: integer
         format: int64
+  models.User:
+    title: User
+    type: object
+    properties:
+      CreateTime:
+        type: integer
+        format: int64
+      Id:
+        type: integer
+        format: int64
+      PassWord:
+        type: string
+      Token:
+        type: string
+      UserName:
+        type: string
 tags:
 - name: user
   description: |
